# secguard

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
crates/secguard-brain/: Cargo.toml
crates/secguard-cli/: Cargo.toml
crates/secguard-cli/src/: cmd_guard.rs  cmd_init.rs  cmd_model.rs  cmd_scan.rs  cmd_update.rs  hook.rs  main.rs  telemetry.rs
crates/secguard-cli/tests/: cli.rs
crates/secguard-guard/: Cargo.toml  README.md
crates/secguard-guard/benches/: matcher_lookup.rs
crates/secguard-guard/docs/: scoring.md
crates/secguard-guard/src/: ast.rs  config.rs  heuristic.rs  lib.rs  matcher.rs  policy.rs  rm.rs  rule_id.rs  rules.rs  scoring.rs
crates/secguard-guard/testdata/bash_guard_fixtures/: NOTICE.md  alembic_upgrade.json  bash_dash_c_rm_rf_etc.json  bfg_delete_files.json  bfg_help.json  chroot_rm_etc.json  cloud_aws_describe_allow.json  cloud_aws_ec2_delete_volume.json  cloud_aws_iam_delete_user.json  cloud_aws_s3_rm_recursive.json  cloud_az_account_show_allow.json  cloud_az_group_delete.json  cloud_az_vm_delete.json  cloud_ibmcloud_cluster_rm.json  cloud_oci_compute_terminate.json  comment_only_command.json  curl_aws_iam_delete_post.json  curl_delete_opensearch.json  curl_get_opensearch_allow.json  curl_googleapis_delete.json  curl_googleapis_get_allow.json  curl_post_elasticsearch.json  curl_railway_graphql_volumedelete.json  curl_railway_status_allow.json  cwd_is_home_rm_dot.json  cwd_normal_rm_dot.json  db_mysql_drop_table.json  db_psql_delete_from.json  db_psql_drop_database.json  db_psql_select_allow.json  db_psql_truncate_table.json  db_redis_flushall.json  db_redis_get_allow.json  db_redis_shutdown.json  django_migrate.json  docker_ps_allow.json  docker_push.json  docker_rm_container.json  docker_system_prune.json  drizzle_push.json  (+116 more)
crates/secguard-guard/tests/: blacklist_whitelist.rs  fixture_runner.rs  model_smoke.rs  scoring_integration.rs
crates/secguard-secrets/: Cargo.toml
crates/secguard-secrets/src/: baseline.rs  lib.rs  redactor.rs  repo.rs
crates/secguard-server/: Cargo.toml
crates/secguard-server/src/: app.rs  auth.rs  main.rs  metrics.rs  response.rs  state.rs
crates/secguard-server/src/handlers/: health.rs  hook.rs  mod.rs
deploy/helm/secguard/: Chart.yaml  values.yaml
docs/proposals/: 001-ast-parser-and-wrapper-unwrap.md
