[workspace]
members = [
    "crates/secguard-brain",
    "crates/secguard-secrets",
    "crates/secguard-guard",
    "crates/secguard-cli",
    "crates/secguard-server",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "Apache-2.0 WITH Commons-Clause-1.0"
repository = "https://github.com/diana-random1st/secguard"

[workspace.dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
prometheus-client = "0.23"
