[package]
name = "secguard-cli"
description = "CLI for secguard security toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "secguard"
path = "src/main.rs"

[features]
default = []
ml = ["secguard-secrets/ml", "secguard-guard/ml"]
metal = ["secguard-brain/metal"]

[dependencies]
secguard-secrets = { path = "../secguard-secrets" }
secguard-guard = { path = "../secguard-guard" }
secguard-brain = { path = "../secguard-brain", optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
